# DrawEngine

./: .gitignore  README.md
Backend/: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  config.json  main.cc  schema.sql  vcpkg.json
Backend/controllers/: AuthController.cc  AuthController.h  DesignController.cc  DesignController.h
Backend/filters/: JwtFilter.cc  JwtFilter.h
Backend/models/: Design.cc  Design.h
Backend/utils/: PasswordHasher.h
Frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/api/: api.js
Frontend/src/components/: CanvasEditor.jsx
Frontend/src/context/: AuthProvider.jsx
Frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
